# aio-http-waiter

./: README.md  pyproject.toml  requirements.txt
aio_http_waiter/: __init__.py
src/aio_http_waiter/: waiter_client.py
src/http_waiter/: client.py
tests/: main.py
