[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aio-http-waiter"
version = "0.1.4"
description = "Python HTTP Waiter"
readme = "README.md"
requires-python = ">=3.13.7"
license = "MIT"
authors = [
  { name = "Fabio Antonio Astore", email = "astore.a.fabio@gmail.com" },
]
dependencies = [
    "aiohttp[speedups] == 3.13.3",
    "aiohttp-retry == 2.9.1"
]

[tool.hatch.build.targets.wheel]
packages = ["aio_http_waiter"]

[tool.hatch.build.targets.sdist]
packages = ["aio_http_waiter"]
